@@ -18,6 +18,9 @@ enum {
 
 static int sceneIdx=-1;
 static NSString *transitions[] = {
+	
+	@"TexturePVRRGB565",
+
 
 	@"TextureAlias",
 	@"TextureMipMap",
